<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/tempMaxHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/tempMinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/min_temp"
        app:layout_constraintBottom_toBottomOf="@+id/tempMinHeader"
        app:layout_constraintStart_toEndOf="@+id/tempMinHeader"
        app:layout_constraintTop_toTopOf="@+id/tempMinHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sunsetHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="@string/sunset_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/sunsetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/sunset"
        app:layout_constraintBottom_toBottomOf="@+id/sunsetHeader"
        app:layout_constraintStart_toEndOf="@+id/sunsetHeader"
        app:layout_constraintTop_toTopOf="@+id/sunsetHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sunriseHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/sunriseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/sunrise"
        app:layout_constraintBottom_toBottomOf="@+id/sunriseHeader"
        app:layout_constraintStart_toEndOf="@+id/sunriseHeader"
        app:layout_constraintTop_toTopOf="@+id/sunriseHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tempMinHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/tempMaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/max_temp"
        app:layout_constraintBottom_toBottomOf="@+id/tempMaxHeader"
        app:layout_constraintStart_toEndOf="@+id/tempMaxHeader"
        app:layout_constraintTop_toTopOf="@+id/tempMaxHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/humidityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="@+id/humidityHeader"
        app:layout_constraintStart_toEndOf="@+id/humidityHeader"
        app:layout_constraintTop_toTopOf="@+id/humidityHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windspeed"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <ImageView
        android:id="@+id/windDegreeArrow"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/windSpeedTextView"
        app:layout_constraintEnd_toStartOf="@+id/windSpeedTextView"
        app:layout_constraintTop_toTopOf="@+id/windSpeedTextView"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/weatherIconView"
        android:layout_width="150dp"
        android:layout_height="144dp"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="116dp"
        android:layout_height="33dp"
        android:text="@string/weather"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/weatherIconView"
        app:layout_constraintStart_toStartOf="@+id/weatherIconView"
        app:layout_constraintTop_toBottomOf="@+id/weatherIconView" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/feelsLikeTextView"
        app:layout_constraintEnd_toStartOf="@+id/feelsLikeTextView"
        app:layout_constraintTop_toTopOf="@+id/feelsLikeTextView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/person_icon" />

    <TextView
        android:id="@+id/feelsLikeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>